[gd_scene load_steps=5 format=3 uid="uid://ckgslg0g5m4n7"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_6swg2"]
[ext_resource type="PackedScene" uid="uid://cxdyg00ahvajh" path="res://Scenes/Mob.tscn" id="2_eboqv"]
[ext_resource type="PackedScene" uid="uid://c4dqsx0gcbu0r" path="res://Scenes/Player.tscn" id="3_yr31m"]

[sub_resource type="Curve2D" id="Curve2D_huip6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 5, -13, 0, 0, 0, 0, 481, -14, 0, 0, 0, 0, 481, 727, 0, 0, 0, 0, 4, 728, 0, 0, 0, 0, 5, -13)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_6swg2")
mob_scene = ExtResource("2_eboqv")

[node name="Player" parent="." instance=ExtResource("3_yr31m")]
position = Vector2(-299, 153)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_huip6")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(5, -13)
rotation = -0.00210084

[connection signal="body_entered" from="Player" to="." method="_on_player_body_entered"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
